--- a/indexhw.html
+++ b/indexhw.html
@@ -10,8 +10,6 @@
 	
 	<div id="animalButtons">
 	</div>
-
-
 	
 	<div id="animalForm">
 		<label for="animal-input">Add an animal
@@ -20,7 +18,7 @@
 		<input id="addAnimal" type="submit" value="Submit">
 	</div>
 	
-	<div id="animals">
+	<div id="animals" style="display:inline-flex;flex-wrap: wrap;">
 	</div>
 	
 	<script
